--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^7.6.15",
     "next": "^12.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.17",
     "@types/react": "^18.0.19",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "autoprefixer": "^10.4.10",
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
